# menu-system-draft

./: CMakeLists.txt  README.md
include/: ui_core.h  ui_editors.h  ui_menu_abi.h
src/: main.c
src/modules/: mod_aprs.c  mod_fm.c
src/ui/: providers.def  ui_core.c  ui_editors.c
